--- a/manifest.plist
+++ b/manifest.plist
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>items</key>
-    <array>
-      <dict>
-        <key>assets</key>
-        <array>
-          <dict>
-            <key>kind</key> <string>software-package</string>
-            <key>url</key>
-            <string>https://github.com/patrickleonardus/ota-downloader/releases/download/v1/KlikBCA.ipa</string>
-          </dict>
-        </array>
-        <key>metadata</key>
-        <dict>
-          <key>bundle-identifier</key> 
-          <string>com.bca.mybca.omni.dev</string> 
-          <key>bundle-version</key> 
-          <string<1.0>/string>
-          <key>kind</key> 
-          <string>software</string> 
-          <key>title</key>
-          <string>Rumah Biru</string>
-        </dict>
-      </dict>
-    </array>
-  </dict>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>https://github.com/patrickleonardus/ota-downloader/releases/download/v1/KlikBCA.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>url</key>
+					<string>https://raw.githubusercontent.com/patrickleonardus/ota-downloader/main/manifest.plist</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>https://github.com/patrickleonardus/ota-downloader/releases/download/v1/DisplayImage.png</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.bca.mybca.omni.dev</string>
+				<key>bundle-version</key>
+				<string>2.3.0</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>platform-identifier</key>
+				<string>com.apple.platform.iphoneos</string>
+				<key>title</key>
+				<string>KlikBCA</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
 </plist>
